--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,4 +6,6 @@ image: python:3.8-slim-buster
 build:
   stage: build
   script:
+    - pip install --upgrade pip
+    - pip install -r requirements.txt
     - python -m build
