--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,13 +1,14 @@
 stages:
   - build
+  - test
 
 image: python:3.8-slim-buster
-
+before_script:
+    - pip install --upgrade pip
+    - pip install -r requirements.txt
 build:
   stage: build
   script:
-    - pip install --upgrade pip
-    - pip install -r requirements.txt
     - python -m build
     
 test:
