--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,8 +4,8 @@ stages:
 
 image: python:3.8-slim-buster
 before_script:
-    -pip install -e .
     - pip install -r requirements.txt
+    - pip install dist/treevolution-0.0.1-py3-none-any.whl
 build:
   stage: build
   script:
