--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,7 @@ stages:
   - build
   - test
   - deploy
+  - release
 
 image: python:3.8-slim-buster
 before_script:
@@ -28,5 +29,18 @@ pages:
     - public
   rules:
       - if: $CI_COMMIT_REF_NAME == $CI_DEFAULT_BRANCH
+
+release_job:
+  stage: release
+  image: registry.gitlab.com/gitlab-org/release-cli:latest
+  rules:
+    - if: $CI_COMMIT_TAG # Run this job when a tag is created
+  before_script:
+    - echo "Prepare new release"
+  script:
+    - echo "Running release_job"
+  release: # See https://docs.gitlab.com/ee/ci/yaml/#release
+    tag_name: '$CI_COMMIT_TAG'
+    description: '$CI_COMMIT_TAG'
 
 
