--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,7 +28,20 @@ pages:
     paths:
     - public
   rules:
-    - if: $CI_COMMIT_REF_NAME == $CI_DEFAULT_BRANCH
+      - if: $CI_COMMIT_REF_NAME == $CI_DEFAULT_BRANCH
+
+release_job:
+  stage: release
+  image: registry.gitlab.com/gitlab-org/release-cli:latest
+  rules:
+    - if: $CI_COMMIT_TAG # Run this job when a tag is created
+  before_script:
+    - echo "Prepare new release"
+  script:
+    - echo "Running release_job"
+  release: # See https://docs.gitlab.com/ee/ci/yaml/#release
+    tag_name: '$CI_COMMIT_TAG'
+    description: '$CI_COMMIT_TAG'
 
 
 release_job:
